trying to fix a problem with blank space remaining on screen on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,6 @@ h3 {
         OBJECTS -> #content
    -------------------------------- */
 .content {
-  min-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
