--- a/styles/objects/_content.scss
+++ b/styles/objects/_content.scss
@@ -3,7 +3,7 @@
    -------------------------------- */
 
 .content {
-    min-height: 100%;
+    // min-height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
